# VPCLI

./: .Dockerfile  .gitignore  Dockerfile  README.md  plan(new).md  plan(old).md  plan.md  pyproject.toml
src/VPCLI/: display.py  engine.py  main.py  ui.py
src/VPCLI/core/: assets.py  colors.py  constants.py
