[project]
name = "VPCLI"
version = "0.1.0"
description = "A CLI tool for providing hybrid predictive and historical investment strategies."
dependencies = [
    # --- CLI Framework & Display ---
    "typer[all] >= 0.9.0",
    "rich >= 13.0.0",

    # --- Core Data & ML Libraries (Pinned for compatibility) ---
    "pandas == 2.3.3",
    "xgboost == 3.1.1",
    "scikit-learn == 1.7.2",
    "numpy == 2.3.4",

    # --- Important Transitive Dependencies (Pinned for safety) ---
    "scipy == 1.16.3",
    "joblib == 1.5.2",
    
    # --- Plotting & Visualization Libraries ---
    "matplotlib == 3.10.7",
    "seaborn == 0.13.2",
    "plotly == 6.4.0",
]

[project.scripts]
strategy-report = "VPCLI.main:app"

[tool.setuptools.packages.find]
where = ["src"]